--- a/template/warehouse.html
+++ b/template/warehouse.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Warehouses</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='warehouse.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='warehouse2.css') }}">
 </head>
 <body>
     <div>
@@ -83,3 +83,4 @@
     </script>
 </body>
 </html>
+
