--- a/template/block_manage_products.html
+++ b/template/block_manage_products.html
@@ -13,7 +13,7 @@
             <div class="search-container">
                 <input type="text" id="productSearch" placeholder="Search Products..." onkeyup="filterProducts()">
             </div>
-            <a href="#" onclick="goBack()" class="back-link">
+            <a href="{{url_for('block_manager_dashboard')}}"  class="back-link">
                 <img src="{{ url_for('static', filename='back-icon.png') }}" alt="Back">
             </a>
         </div>
