--- a/template/block_manager_dashboard.html
+++ b/template/block_manager_dashboard.html
@@ -22,7 +22,8 @@
         <h2>Welcome to {{ block_name }}!</h2>
         <ul class="dashboard-links">
             <li><a href="/block_manage_products">Manage Block Products</a></li>
-            <li><a href="/products">View Products</a></li>
+            <li><a href="{{ url_for('go_to_products_from_block') }}">Manage Products</a></li>
+
         </ul>
     </main>
 </body>
