--- a/template/products.html
+++ b/template/products.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Products</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='product.css') }}">
 </head>
+
 <body>
     <div>
         <div class="header">
@@ -13,9 +15,21 @@
             <div class="search-container">
                 <input type="text" id="productSearch" placeholder="Search Products..." onkeyup="filterProducts()">
             </div>
-            <a href="#" onclick="goBack()" class="back-link">
+
+            <a href="
+    {% if source == 'Admin' %}
+        {{ url_for('admin_dashboard') }}
+    {% elif source == 'Warehouse Manager' %}
+        {{ url_for('warehouse_manager_dashboard') }}
+    {% elif source == 'Block Manager' %}
+        {{ url_for('block_manager_dashboard') }}
+    {% endif %}
+" class="back-link">
                 <img src="{{ url_for('static', filename='back-icon.png') }}" alt="Back">
             </a>
+
+
+
         </div>
     </div>
 
@@ -25,6 +39,7 @@
         <form action="/add_product" method="POST" class="product-form">
             <label for="product_id">Product ID:</label>
             <input type="text" name="product_id" required>
+            <input type="hidden" name="source" value="{{ source }}">
 
             <label for="product_type">Product Type:</label>
             <input type="text" name="product_type" required>
@@ -60,63 +75,69 @@
     </div>
 
     <div>
-                <!-- Product List Table -->
-                <h2>Product List</h2>
-                <form action="/delete_products" method="POST"> <!-- Form for deleting products -->
-                    <table class="product-table" id="productTable">
-                        <thead>
-                            <tr>
-                                <th>Select</th> <!-- New column for checkboxes -->
-                                <th>Product ID</th>
-                                <th>Product Type</th>
-                                <th>Brand</th>
-                                <th>Cost Price</th>
-                                <th>Weight</th>
-                                <th>Selling Price</th>
-                                <th>Category ID</th>
-                                <th>Offer ID</th>
-                                <th>Block Count</th>
-                                <th>Warehouse Count</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for product in products %}
-                            <tr>
-                                <td><input type="checkbox" name="product_ids" value="{{ product[0] }}"></td> <!-- Checkbox for each product -->
-                                <td>{{ product[0] }}</td>
-                                <td>{{ product[1] }}</td>
-                                <td>{{ product[2] }}</td>
-                                <td>{{ product[3] }}</td>
-                                <td>{{ product[4] }}</td>
-                                <td>{{ product[5] }}</td>
-                                <td>{{ product[6] }}</td>
-                                <td>{{ product[7] }}</td>
-                                <td>{{ product[8] }}</td>
-                                <td>{{ product[9] }}</td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                    <button type="submit" style="margin-top: 20px; background-color: #3786ee; color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; font-weight: bold; text-transform: uppercase;">Delete Selected Products</button>
-                    <button type="submit" formaction="/edit_products" style="margin-top: 20px; background-color: #1976d2; color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; font-weight: bold; text-transform: uppercase;">Edit Selected Products</button>
-                </form>
+        <!-- Product List Table -->
+        <h2>Product List</h2>
+        <form action="/delete_products" method="POST"> <!-- Form for deleting products -->
+            <input type="hidden" name="source" value="{{ source }}">
+            <table class="product-table" id="productTable">
+                <thead>
+                    <tr>
+                        <th>Select</th> <!-- New column for checkboxes -->
+                        <th>Product ID</th>
+                        <th>Product Type</th>
+                        <th>Brand</th>
+                        <th>Cost Price</th>
+                        <th>Weight</th>
+                        <th>Selling Price</th>
+                        <th>Category ID</th>
+                        <th>Offer ID</th>
+                        <th>Block Count</th>
+                        <th>Warehouse Count</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for product in products %}
+                    <tr>
+                        <td><input type="checkbox" name="product_ids" value="{{ product[0] }}"></td>
+                        <!-- Checkbox for each product -->
+                        <td>{{ product[0] }}</td>
+                        <td>{{ product[1] }}</td>
+                        <td>{{ product[2] }}</td>
+                        <td>{{ product[3] }}</td>
+                        <td>{{ product[4] }}</td>
+                        <td>{{ product[5] }}</td>
+                        <td>{{ product[6] }}</td>
+                        <td>{{ product[7] }}</td>
+                        <td>{{ product[8] }}</td>
+                        <td>{{ product[9] }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            <button type="submit"
+                style="margin-top: 20px; background-color: #3786ee; color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; font-weight: bold; text-transform: uppercase;">Delete
+                Selected Products</button>
+            <button type="submit" formaction="/edit_products"
+                style="margin-top: 20px; background-color: #1976d2; color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; font-weight: bold; text-transform: uppercase;">Edit
+                Selected Products</button>
+        </form>
     </div>
 
     <script>
 
-   // Store the original referrer only if it's not already stored and not from z.html
-   if (!sessionStorage.getItem('originalReferrer') && document.referrer && !document.referrer.includes('z.html')) {
-        sessionStorage.setItem('originalReferrer', document.referrer);
-    }
-
-    function goBack() {
-        const originalReferrer = sessionStorage.getItem('originalReferrer');
-        if (originalReferrer) {
-            window.location.href = originalReferrer; // Go back to the stored original referrer
-        } else {
-            window.history.back(); // Fallback if no referrer is stored
+        // Store the original referrer only if it's not already stored and not from z.html
+        if (!sessionStorage.getItem('originalReferrer') && document.referrer && !document.referrer.includes('z.html')) {
+            sessionStorage.setItem('originalReferrer', document.referrer);
         }
-    }
+
+        function goBack() {
+            const originalReferrer = sessionStorage.getItem('originalReferrer');
+            if (originalReferrer) {
+                window.location.href = originalReferrer; // Go back to the stored original referrer
+            } else {
+                window.history.back(); // Fallback if no referrer is stored
+            }
+        }
         // JavaScript function to filter products in the table
         function filterProducts() {
             const input = document.getElementById('productSearch');
@@ -140,4 +161,5 @@
         }
     </script>
 </body>
+
 </html>
